streamlining some layout issues
Former-commit-id: 661b8032a6b37875d7d35b730b614ceb201b9179
Former-commit-id: ffdd612e5bf3e5c02af10582eeecd084c1706ad6
Former-commit-id: 1272632297b6da35be3d8f666e3fa2dee4cdbee9
Former-commit-id: 99ae0baf09da680915187517106fca7367db2e81
Former-commit-id: 743c6e64495c9cdd147d6c0197c06035582f2aba
Former-commit-id: a3023042d268cd65a95fc2e820936b4e58dbbe54

--- a/podiobooks/themes/pb2-jq/static/css/adaptive.css
+++ b/podiobooks/themes/pb2-jq/static/css/adaptive.css
@@ -3,20 +3,13 @@
  */
 @media all and (max-width:950px){	
 	.width{		
-		width:auto;
-		margin-left: 18px;
-		margin-right: 18px;
-		
+		width:92%;
 	}
 	.home .width{
-		padding-left:40px;
-		padding-right: 40px;
+		
 	}
 	.home .pg-foot{
-		padding-left:0;
-		padding-right:0;	
 		width:95%;
-		margin:0 auto;
 	}
 	.nav{
 		margin:0;
@@ -132,10 +125,10 @@
 
 	.width,
 	.home .width{
-		width:95%;
+		
 	}
 	.home .width{
-		padding:0;
+		
 	}
 	.hide-on-mobile{
 		display:none;
@@ -230,10 +223,6 @@
 	.libsyn-wrap{
 		float:none;
 		margin:0 0 1em;
-	}
-	.pg-foot{
-		margin:1.5em auto;
-		padding:1.5em 0;
 	}
 
 }
